prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/hex_too_many_digits.nut
// EXPECT_ERROR: "too many digits for a hex number"
let x = 0x100000000000000000
